--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
+    <meta name="description" content="My Awesome App description">
+    <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180">
+    <link rel="mask-icon" href="/vite.svg" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
+
+  <link rel="manifest" href="/app.webmanifest">
+
     <title>Finance</title>
   </head>
   <body>
