--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180">
     <link rel="mask-icon" href="/vite.svg" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
-
-  <link rel="manifest" href="/app.webmanifest">
+    <meta name="google" content="notranslate" />
+    <link rel="manifest" href="/app.webmanifest">
 
     <title>Finance</title>
   </head>
