--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <meta name="description" content="My Awesome App description">
     <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180">
-    <link rel="mask-icon" href="/vite.svg" color="#FFFFFF">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="mask-icon" href="/vite.svg" color="#000">
+    <meta name="theme-color" content="#000">
     <meta name="google" content="notranslate" />
     <link rel="manifest" href="/app.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
